--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -64,6 +64,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\body.cs" />
+    <Compile Include="Assets\camera.cs" />
     <Compile Include="Assets\leftLowerLeg.cs" />
     <Compile Include="Assets\legControl.cs" />
     <Compile Include="Assets\rightLegControl.cs" />
